kled_derive/tests/ui/fails/item_is_not_a_struct.rs
#[macro_use]
extern crate kled_derive;

#[operator(type = "flow")]
pub enum Map {}

fn main() {}
