kled_derive/tests/ui/fails/item_is_not_a_struct.stderr
error: expected `struct`
 --> $DIR/item_is_not_a_struct.rs:5:5
  |
5 | pub enum Map {}
  |     ^^^^
